refactor: create a mount function for products, pass in target element from container

--- a/ecomm/container/public/index.html
+++ b/ecomm/container/public/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <section>
-      <ol id="dev-products"></ol>
+      <ol id="my-products"></ol>
     </section>
     <section id="cart-dev"></section>
   </body>
