create mount function for cart, pass in target element from container

--- a/ecomm/container/public/index.html
+++ b/ecomm/container/public/index.html
@@ -9,6 +9,6 @@
     <section>
       <ol id="my-products"></ol>
     </section>
-    <section id="cart-dev"></section>
+    <section id="my-cart"></section>
   </body>
 </html>
